fix(events): align Create Event layout and fix accessibility

--- a/src/style/app-fixed.module.css
+++ b/src/style/app-fixed.module.css
@@ -8289,6 +8289,10 @@ form {
   margin-left: 5px;
 }
 
+.switch :global(.form-check-input) {
+  margin-inline-start: -1.7em;
+}
+
 .checkboxdiv {
   display: flex;
   margin-bottom: 5px;
@@ -8983,6 +8987,17 @@ form {
   padding-left: 5px;
   margin-right: 5px;
   margin-left: 5px;
+}
+
+.datediv {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+  margin-bottom: 15px;
+}
+
+.datediv > div {
+  flex: 1;
 }
 
 @media only screen and (max-width: 600px) {
